--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "profile": {
     "test1": {
-      "sender": "lemon_3nigma@hotmail.com",
-      "password": "sunsh!ne3nigma",
-      "recipients": "lemon_3nigma@hotmail.com",
+      "sender": "email@example.com",
+      "password": "password",
+      "recipients": "email@example.com",
       "cc": "",
       "bcc": ""
     }
